Adjusted the photos on the team members page and cleaned up the images in the public directory.

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -7,7 +7,7 @@
   </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/" href="Beanstalk.webp">
+  <link rel="icon" type="image/" href="../public/icon/Beanstalk.webp">
 </head>
 <body>
   <app-root></app-root>
